Fixed layout issue with viewing people profile

--- a/global.css
+++ b/global.css
@@ -197,9 +197,13 @@ ul li {
   background-color: var(--background);
 }
 /* Mobile styles */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .form-container {
     background-color: inherit;
+  }
+  .card-sm {
+    min-width: 0px;
+    max-width: 400px;
   }
 
   .sm-flex-col {
@@ -214,7 +218,8 @@ ul li {
   }
   #mainView {
     width: 100svw;
-    display: hidden;
+    height: 100svh;
+    display: none;
   }
   #bottomNav {
     position: fixed;
@@ -225,6 +230,7 @@ ul li {
     border: 1px solid var(--border-color);
     padding: 10px;
     border-radius: var(--radius);
+    background-color: var(--secondary);
   }
   #bottomNav ul {
     display: grid;
